--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,11 @@
 ---
 
 ---
+<a href="/">Home</a>
+<a href="/about/">About</a>
+
+<h1>About Me</h1>
+<h2>... and my new Astro site!</h2>
 
 <html lang="en">
 	<head>
