--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "Home Page";
 ---
 <a href="/">Home</a>
 <a href="/about/">About</a>
@@ -13,7 +13,8 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Home Page</title>
+    <title>{pageTitle}</title>
 	</head>
 	<body>
 		<h1>Astro</h1>
