--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,7 @@
 ---
+import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -13,6 +16,10 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <a href="/">Home</a>
@@ -27,6 +34,17 @@ const goal = 3;
     <meta name="viewport" content="width=device-width" />
     <title>Astro</title>
     <title>{pageTitle}</title>
+    <style define:vars={{skillColor}}>
+        h1 {
+          color: purple;
+          font-size: 4rem;
+        }
+        .skill {
+          color: rgb(60, 245, 60);
+          color: var(--skillColor);
+          font-weight: bold;
+        }
+      </style>
   </head>
   <body>
     <a href="/">Home</a>
@@ -46,12 +64,16 @@ const goal = 3;
 </ul>
 <p>My skills are:</p>
 <ul>
-  {skills.map((skill) => <li>{skill}</li>)}
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
 </ul>
 {happy && <p>I am happy to be learning Astro!</p>}
 
 {finished && <p>I finished this tutorial!</p>}
 
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}s
-  </body>
+<Footer />
+<script>
+  import "../scripts/menu.js";
+</script>
+</body>
 </html>
