--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 const pageTitle = "My Astro Learning Blog";
+import Footer from '../components/Footer.astro';
 ---
 <html lang="en">
   <head>
@@ -20,5 +21,9 @@ const pageTitle = "My Astro Learning Blog";
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
