--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,11 @@
-<body>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
-
-  <h1>My Astro Learning Blog</h1>
+---
+import BaseLayout from '../layouts/Baselayout.astro'
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
+const pageTitle = "My Astro Learning Blog";
+---
+<BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
-</body>
+  <ul>
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+  </BaseLayout>
