--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,9 @@
 ---
+import BaseLayout from '../layouts/Baselayout.astro';
+import Greeting from '../components/Greeting.jsx';
+const pageTitle = "Home Page";
 ---
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>My Astro Site</h1>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>Lyka's Blog</h2>
+  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+</BaseLayout>
