--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -17,7 +17,7 @@ const finished = false;
 const goal = 3;
 const skillColor = "navy";
 ---
-<div transition:animate="slide" class="nav-links">
+<div class="nav-links">
   <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href="/blog/">Blog</a>
