--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -47,5 +47,7 @@
       localStorage.setItem("theme", isDark ? "dark" : "light");
     }
   
-    document.getElementById("themeToggle").addEventListener("click", handleToggleClick);
+    document
+    .getElementById("themeToggle")
+    .addEventListener("click", handleToggleClick);
   </script>
